# sillytui

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: release.yml
assets/: demo.mov
examples/: qwen3_inference.c  tokenize.c
src/: character.c  chat.c  chat.h  config.c  config.h  history.c  history.h  llm.c  llm.h  main.c  markdown.c  markdown.h  modal.c  modal.h  persona.c  sampler.c  sampler.h  simd.c  simd.h  simd_arm64.S  tokenizer.c  tokenizer.h  ui.c  ui.h  unicode_tables.c  unicode_tables.h
src/chat/: author_note.c  author_note.h  chat.c  chat.h  history.c  history.h
src/core/: config.c  config.h  debug.h  error.c  error.h  log.c  log.h  time.c  time.h
src/inference/kernels/embedding/: embedding.c  embedding.h  embedding_kernels.h  embedding_neon.c
src/inference/kernels/gemm/: gemm_amx.c
src/inference/kernels/kv_cache/: kv_cache.c  kv_cache.h  kv_cache_kernels.h  kv_cache_neon.c
src/inference/linalg/: activation.c  activation_kernels.h  activation_neon.c  gemm.c  gemm.h  gemm_amx.c  gemm_kernels.h  gemm_neon.c  rope.c  rope.h  rope_neon.c
src/inference/linalg/activation/: activation.c  activation.h  activation_neon.c
src/inference/linalg/amx/: aarch64.h
src/inference/linalg/gemm/: gemm.c  gemm_amx.c  gemm_kernels.h  gemm_neon.c
src/inference/linalg/norm/: layernorm.c  layernorm.h  layernorm_kernels.h  layernorm_neon.c
src/inference/linalg/rope/: rope.c  rope_kernels.h  rope_neon.c
src/inference/model/: base.c  base.h
src/inference/model/qwen3/: attention_layer.c  attention_layer.h  config.c  config.h  ffn.c  ffn.h  qwen3.c  qwen3.h  transformer_layer.c  transformer_layer.h  weights.c  weights.h
src/llm/: common.c  common.h  llm.c  llm.h  sampler.c
src/llm/backends/: anthropic.c  backend.h  kobold.c  openai.c
src/lore/: lorebook.c  lorebook.h
src/tokenizer/: gpt2bpe.c  gpt2bpe.h
src/ui/: console.c  console.h  markdown.c  modal.c  ui.c  ui.h
src/ui/syntax/ulight/: chars.cpp  io.cpp  parse_utils.cpp  ulight.cpp
src/ui/syntax/ulight/lang/: bash.cpp  cowel.cpp  cpp.cpp  css.cpp  diff.cpp  ebnf.cpp  html.cpp  js.cpp  json.cpp  kotlin.cpp  llvm.cpp  lua.cpp  nasm.cpp  python.cpp  rust.cpp  tex.cpp  xml.cpp
tests/: run_all_tests.c  run_tests.c  safetensors_impl.cc  test_activation.cc  test_activation_pytorch_accuracy.cc  test_embedding.cc  test_embedding_pytorch_accuracy.cc  test_framework.h  test_gemm.cc  test_gemm_pytorch_accuracy.cc  test_kv_cache.cc  test_kv_cache_pytorch_accuracy.cc  test_layernorm.cc  test_lorebook.c  test_robustness.c  test_rope.cc  test_rope_pytorch_accuracy.cc  test_safetensors.cc
tests/data/: honkai.json  test_lorebook.json
tests/integration/: test_chat_integration.c  test_helper.h
tests/kernels/: test_activation.cc  test_activation_pytorch_accuracy.cc  test_attention.cc  test_embedding_pytorch_accuracy.cc  test_gemm.cc  test_gemm_pytorch_accuracy.cc  test_kv_cache_pytorch_accuracy.cc  test_layernorm.cc  test_rope.cc  test_rope_pytorch_accuracy.cc  test_sampling.cc  test_sampling_pytorch_accuracy.cc  test_softmax.cc  test_softmax_pytorch_accuracy.cc
tests/reference/: kv_cache_reference.safetensors  sampling_reference.safetensors  softmax_reference.safetensors
tokenizers/llama3/: vocab.json
